--- a/server/Gemfile
+++ b/server/Gemfile
@@ -42,6 +42,7 @@ group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[mri mswin mswin64 mingw x64_mingw]
   gem "dotenv-rails"
+  gem "faker" # For generating seed data
 end
 
 group :development do
